# wfm

./: .gitignore  .replit  README.md  WINDOWS_SETUP.md  app.py  claude_desktop_config.json  config.json  download_vendors.sh  drizzle.config.ts  drizzle.config.ts.sqlite  export_workflow.py  fetch_token.py  local.db  mcp_config.json  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  start.bat  start.sh
attached_assets/: Pasted-Great-idea-What-you-re-really-describing-is-a-visual-co_1768954816813.txt  Pasted-In-my-project-I-will-be-working-extensively-with-Apache_1769292902361.txt  Pasted-Perfect-here-s-the-next-level-enhanced-plan-tailored-ex_1768964611261.txt  Pasted-Perfect-this-is-a-very-n8n-core-question-I-ll-give-you-_1769127869518.txt
backend/: credential_manager.py  database.py  main.py  requirements.txt  scheduler.py  workflow_engine.py
backend/connectors/: __init__.py  airflow_mcp.py  azure_mcp.py  http_mcp.py  mssql_mcp.py  s3_mcp.py
backend/mcp_servers/: __init__.py  airflow_server.py  azure_server.py  http_server.py  s3_server.py  sftp_server.py  sql_server.py  (+2 more)
client/: package-lock.json  package.json  requirements.md  vite.config.js
flowforge_v2/: README.md  docker-compose.yml
frontend/: index.html
instance/: workflow.db
server/: app.py  db.ts  engine.ts  exporter.py  llm_service.py  models.py  node_executor.py  routes.ts  storage.ts  workflow_engine.py
server_py/: airflow_api.py  main.py  management.py  storage.py  utils.py  workflows.py
shared/: routes.ts  schema.ts
templates/: index.html  lists.html
(+58 files in other folders)
